# DashboardAutomatizadoMoodar

./: .dockerignore  .env  .gitignore  .goreleaser.yml  ACTIVATION_PROTOCOL.md  DECRYPT_CREDENTIALS.md  Dockerfile  Dockerfile.dev  README.md  README_DOCKER.md  docker-compose.dev.yml  pyproject.toml  requirements.txt  start-server.spec
.github/workflows/: launcher-build.yml  publish-docker-hub.yml
dv_admin_automator/: __init__.py  cli.py
dv_admin_automator/activation/: __init__.py  cli.py  client.py  storage.py  unlock.py  verify.py
dv_admin_automator/backend/: appointments.py
dv_admin_automator/backend/importer/: __init__.py  detector.py  legacy_adapter.py  parsers.py  runner.py  service.py  updater.py
dv_admin_automator/browser/: manager.py  pool.py  service.py
dv_admin_automator/config/: loader.py  schema.py
dv_admin_automator/executor/: runner.py
dv_admin_automator/pages/: base_page.py
dv_admin_automator/ui/web/: jobs.py  server.py
dv_admin_automator/ui/web/api/: __init__.py  cred_loader.py  credentials_cache.py  routes_acolhimentos.py  routes_appointments.py  routes_auth.py  routes_companies.py  routes_import.py  routes_keepalive.py  routes_reports.py  sheets_client.py
dv_admin_automator/utils/: logging.py
launcher/: ICON-README.md  README.md  go.mod  main.go
scripts/: README.md  debug_sheet.py  prepare_docker_context.py  start-server-automator.applescript  start-server-docker.sh  start-server.bat  start-server.ps1  start-server.sh  start-server1.bat  start_server.py
tools/: activation_stub.py  example_input.py  remove_comments.py
(+17 files in other folders)
